@@ -1,0 +1,28 @@
+<?xml version="1.0" encoding="utf-8"?>
+
+<!--This file is part of Chummer5a.
+
+    Chummer5a is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    Chummer5a is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with Chummer5a.  If not, see <http://www.gnu.org/licenses/>.
+
+    You can obtain the full source code for Chummer5a at
+    https://github.com/chummer5a/chummer5a
+-->
+<chummer>
+  <qualities>
+    <!-- Hide all changelings, infected, and drakes (in that order) -->
+    <quality xpathfilter="(bonus/metageniclimit != 0) or (bonus/limitcritterpowercategory = 'Infected') or contains(name, 'Carrier (HMHVV Strain') or (bonus/limitcritterpowercategory = 'Drake') or name = 'Latent Dracomorphosis'">
+      <careeronly amendoperation="addnode" />
+    </quality>
+  </qualities>
+</chummer>
